--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
-    "@electron-toolkit/utils": "^3.0.0"
+    "@electron-toolkit/utils": "^3.0.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.6"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
