--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^5.16.6"
+    "@mui/material": "^5.16.6",
+    "react-feather": "^2.0.10",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
